# wireme

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  create-draft-release.yml  prepare-release.yml  release.yml
docs/adr/: 0001-typed-facade-over-fastdepends.md  0002-hidden-signatures-and-keyword-only-explicit-values.md  0003-single-process-level-provider.md  0004-fastapi-as-isolated-optional-extra.md  0005-universal-async-generator-bridge.md  0006-override-bridge-discovery-at-context-entry.md  0007-singletons-via-named-factories.md  0008-fromweb-primary-wired-endpoints-secondary.md  0009-keyword-only-injected-parameters.md  0010-class-level-wire-wires-constructor-only.md  0011-preferred-way-first-documentation.md  0012-semver-with-strict-0x-mapping.md  0013-wire-configuration-and-extension-surface.md  0014-thin-readme-with-guide-pages.md  0015-project-defaults-via-bound-decorators.md  0016-member-selection-stays-out-of-wire.md  0017-docs-site-on-zensical.md  0018-di-only-without-validation-or-casting.md  0019-canonical-versioned-release-notes.md  README.md  deferred-decisions.md  template.md
examples/: README.md  basic.py  classes.py  custom_integration.py  factories.py  fastapi_endpoints.py  fastapi_integration.py  fastapi_overrides.py  fastapi_resources.py  field_constraints.py  method_wiring.py  nested.py  overrides.py  project_defaults.py  protocols.py  requires.py  resources.py  singletons.py  validation.py
release/: README.md  __init__.py  prepare.py
scripts/: __init__.py  brand  clean  examples  release.py  smoke
src/wireme/: __init__.py  _core.py  _errors.py  _impl.py
src/wireme/fastapi/: __init__.py  _compat.py  _dependencies.py  _overrides.py
tests/: smoke_test.py  test_type_aliases.py  test_wireme.py  typecheck.py
tests/automation/: test_release.py  test_workflow_contracts.py
tests/integration/fastapi/: _support.py  test_from_web.py  test_lifecycle.py  test_overrides.py  test_wired_endpoints.py
tests/smoke/: core.py  fastapi_integration.py  fastapi_missing.py
tests/typing/: core.py  fastapi_integration.py
tests/unit/: test_core.py  test_public_api.py  test_type_aliases.py
website/: requirements.txt  zensical.toml
website/docs/: index.md  release-notes.md  the-wireme-way.md
website/docs/guide/: README.md  classes.md  dependency-graph.md  extending.md  fastapi.md  getting-started.md  protocols.md  resources.md  side-effects.md  testing.md  validation.md
website/docs/recipes/: fastapi-app.md  guards.md  settings.md  testing.md
website/docs/stylesheets/: extra.css
website/overrides/: main.html
