[project]
name = "wireme"
version = "0.2.1"
description = "Tiny, typed dependency injection that leaves values unchanged."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mohanad Ghali", email = "mghalix@gmail.com" }]
keywords = ["dependency-injection", "dependency-graph", "di", "typing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = ["fast-depends>=3.0.8,<3.1"]

[project.urls]
Homepage = "https://github.com/mghalix/wireme"
Repository = "https://github.com/mghalix/wireme"
Issues = "https://github.com/mghalix/wireme/issues"
Changelog = "https://wireme.mghalix.com/release-notes/"

[project.optional-dependencies]
fastapi = ["fastapi>=0.128.2,<1"]

[dependency-groups]
dev = [
    "basedpyright",
    "commitizen>=4.16.5",
    "httpx>=0.23,<1",
    "httpx2>=2.7.0",
    "prek>=0.4.10",
    "pytest",
    "pytest-cov",
    "ruff",
    "rust-just>=1.56.0,<2",
    "trio",
    "twine>=6.2.0",
    "vulture>=2.16",
    "zizmor>=1.27.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "N", "RUF", "S", "SIM", "UP"]
ignore = ["N802", "S101"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["wireme.Wired", "wireme.wired"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/automation"]
pythonpath = ["."]
addopts = ["--strict-config", "--strict-markers"]
markers = ["integration: tests involving optional third-party frameworks"]

[tool.coverage.run]
branch = true
source = ["wireme"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.vulture]
paths = ["src", "release", "scripts", "tests", "examples"]
min_confidence = 100

[tool.commitizen]
name = "cz_conventional_commits"

[tool.basedpyright]
include = [
  "src",
  "tests/unit",
  "tests/integration",
  "tests/automation",
  "tests/typing",
  "examples",
  "release/prepare.py",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false
